@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.5.18-cur, done by cs@nop.
--;-;-;2022-05-18 12:32:59, took 00:08:29, with 80 workers, on 2880 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2022-05-18 14:57:54, took 00:08:43, with 80 workers, on 2880 cases, 2 failed, 0 traces, 32 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.freertr.org/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -303,8 +303,8 @@ http://sources.freertr.org/cfg/conn-nvgre10.tst;conn-nvgre10.tst;success;sep tun
 http://sources.freertr.org/cfg/conn-nvgre11.tst;conn-nvgre11.tst;success;ethernet tunneling with nvgre
 http://sources.freertr.org/cfg/conn-nvgre12.tst;conn-nvgre12.tst;success;vlan tunneling with nvgre
 http://sources.freertr.org/cfg/conn-nvgre13.tst;conn-nvgre13.tst;success;tunnel interface with nvgre
-http://sources.freertr.org/cfg/conn-p4lang01.tst;conn-p4lang01.tst;success;p4lang demultiplexer
-http://sources.freertr.org/cfg/conn-p4lang02.tst;conn-p4lang02.tst;success;p4lang downlink
+http://sources.freertr.org/cfg/conn-p4lang01.tst;conn-p4lang01.tst;#6-run-r1 tping 100 5 1.1.1.2 vrf v1;p4lang demultiplexer
+http://sources.freertr.org/cfg/conn-p4lang02.tst;conn-p4lang02.tst;#6-run-r1 tping 100 5 1.1.1.2 vrf v1;p4lang downlink
 http://sources.freertr.org/cfg/conn-pckoi01.tst;conn-pckoi01.tst;success;pckoip over ipv4
 http://sources.freertr.org/cfg/conn-pckoi02.tst;conn-pckoi02.tst;success;pckoip over ipv6
 http://sources.freertr.org/cfg/conn-pckoi03.tst;conn-pckoi03.tst;success;pckoip over pckoip
