@@ -299,8 +299,8 @@ qc pass: sep tunneling with nvgre
 qc pass: ethernet tunneling with nvgre
 qc pass: vlan tunneling with nvgre
 qc pass: tunnel interface with nvgre
-qc pass: p4lang demultiplexer
-qc pass: p4lang downlink
+failed: p4lang demultiplexer
+failed: p4lang downlink
 qc pass: pckoip over ipv4
 qc pass: pckoip over ipv6
 qc pass: pckoip over pckoip
